--- a/css/style.css
+++ b/css/style.css
@@ -366,7 +366,9 @@ footer {
 
 /* chiudi */
 #infoPopup #closePopup {
-    float: right;
+    position: fixed;
+    top: 5%;
+    right: 5%;
     font-size: 20px;
     cursor: pointer;
 }
@@ -388,8 +390,8 @@ footer {
     background-color: #ffffff;
     color: #111;
     text-align: center;
-    border-radius: 12px;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 }
 
 .tdee-description h2 {
@@ -478,7 +480,7 @@ footer {
 /*challenge.html*/
 
 .container {
-  max-width: 1000px;
+  max-width: 800px;
   margin: 50px auto;
   padding: 20px;
 }
@@ -491,12 +493,12 @@ h1 {
 
 .workout {
   background: #fff;
-  border-radius: 12px;
+  border-radius: 15px;
   margin-bottom: 20px;
   padding: 20px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
   cursor: pointer;
-  transition: background 0.2s;
+  transition: background 0.3s;
   position: relative;
 }
 
@@ -546,7 +548,7 @@ main.container {
     margin: 40px auto;
     padding: 20px;
     background: #fff;
-    border-radius: 12px;
+    border-radius: 15px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
   }
   
@@ -575,17 +577,17 @@ main.container {
   main.container input[type="text"],
   main.container input[type="number"] {
     width: 100%;
-    padding: 6px;
+    padding: 5px;
     border-radius: 5px;
     border: 1px solid #ccc;
   }
   
   button {
-    padding: 10px 16px;
+    padding: 10px 10px;
     border: none;
     background-color: #111;
     color: white;
-    border-radius: 8px;
+    border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
