--- a/css/style.css
+++ b/css/style.css
@@ -67,13 +67,13 @@ nav ul li a {
     font-weight: bold;
 }
 
-
 footer {
     text-align: center;
     padding: 2px;
     background-color: #111;
     color: white;
 }
+
 
 /* Hero Section */
 .hero {
@@ -616,4 +616,9 @@ main.container {
   #salva-btn-scheda:hover {
     background-color: #444;
   }
+  
+/*----------------------------------*/
+/*login.html*/
+
+
   
