--- a/public/css/style.css
+++ b/public/css/style.css
@@ -549,52 +549,58 @@ h1 {
 }
 
 main.container {
-    max-width: 900px;
+    max-width: 100%;
     margin: 40px auto;
     padding: 20px;
     background: #fff;
     border-radius: 12px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-  }
+}
   
-  main h1 {
+main h1 {
     text-align: center;
     margin-bottom: 30px;
-  }
-  
-  table {
+}
+
+.table-responsive {
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
     user-select: none;
-  }
-  
-  thead {
+}
+
+thead {
     background-color: #111;
     color: white;
-  }
-  
-  td, th {
+}
+
+td, th {
     border: 1px solid #ddd;
     padding: 12px;
     text-align: center;
-  }
-  
-  main.container input[type="text"],
-  main.container input[type="number"] {
+}
+
+main.container input[type="text"],
+main.container input[type="number"] {
     width: 100%;
     padding: 6px;
     border-radius: 5px;
     border: 1px solid #ccc;
-  }
+}
 
-  .input-nome-scheda {
-  margin-bottom: 20px;
+.input-nome-scheda {
+    margin-bottom: 20px;
 }
 
 .input-nome-scheda label {
-  font-weight: bold;
-  margin-right: 10px;
+    font-weight: bold;
+    margin-right: 10px;
 }
 
 #nome-scheda {
@@ -605,7 +611,6 @@ main.container {
   border: 1px solid #ccc;
   border-radius: 5px;
 }
-  
   button {
     padding: 10px 16px;
     border: none;
