--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,7 +212,7 @@ footer {
 
 .services-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 30px;
     margin-top: 50px;
     width: 100%;
@@ -646,3 +646,36 @@ main.container input[type="number"] {
     background-color: #444;
   }
   
+/*--------------------------------------------------------*/
+/*map.html*/
+/* 
+.navbar {
+    background-color: #111;
+    padding: 1rem 2rem;
+    color: white;
+}
+
+.navbar .logo a {
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: #f2f2f2;
+}
+
+main {
+    height: calc(100% - 70px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+}
+
+h1 {
+    margin: 1rem 0;
+} */
+
+#map {
+    width: 100%;
+    height: 90vh;
+    border: 2px solid #444;
+    border-radius: 15px;
+}
