--- a/public/css/style.css
+++ b/public/css/style.css
@@ -648,34 +648,86 @@ main.container input[type="number"] {
   
 /*--------------------------------------------------------*/
 /*map.html*/
-/* 
-.navbar {
-    background-color: #111;
-    padding: 1rem 2rem;
-    color: white;
-}
 
-.navbar .logo a {
-    text-decoration: none;
-    font-size: 1.5rem;
-    color: #f2f2f2;
-}
-
-main {
-    height: calc(100% - 70px);
+.trova-palestra {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
+    height: 90vh;
+    gap: 20px;
+    padding: 20px;
 }
 
-h1 {
-    margin: 1rem 0;
-} */
+.filtri {
+    width: 25%;
+    padding: 20px;
+    background-color: #f5f5f5;
+    border: 2px solid #ccc;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    overflow-y: auto;
+}
+
+.filtri h2 {
+    margin-top: 0;
+}
+
+.filtri label {
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.filtri p {
+    margin-top: 25px;
+    margin-bottom: 20px;    
+}
+
+.filtri input[type="text"],
+.filtri button {
+    width: 100%;
+    padding: 8px;
+    margin-top: 18px;
+    border-radius: 8px;
+    border: 1px solid #999;
+}
+
+.checkbox-group label {
+    font-weight: normal;
+    margin-top: 10px;
+}
+
+.filtri button {
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    margin-top: 25px;
+}
+
+.filtri button:hover {
+    background-color: #444;
+}
 
 #map {
-    width: 100%;
-    height: 90vh;
+    width: 75%;
+    height: 100%;
     border: 2px solid #444;
     border-radius: 15px;
+}
+
+
+.filtri select {
+    width: 100%;
+    padding: 8px;
+    margin-top: 8px;
+    border-radius: 8px;
+    border: 1px solid #999;
+}
+
+.filtri .checkbox-group label {
+    font-weight: normal;
+    margin-top: 8px;
+}
+
+.filtri p {
+    margin-top: 25px;
+    margin-bottom: 20px;
 }
